--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-1.23MB/s(Youtube:不良林), server: 134.195.196.128, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇯🇵 日本-614.6KB/s(Youtube:不良林), server: 194.156.231.248, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇦 加拿大-945.9KB/s(Youtube:不良林), server: 134.195.196.128, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇺🇸 美国-1.07MB/s(Youtube:不良林), server: 5.188.0.151, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-1.63MB/s(Youtube:不良林), server: 134.195.196.85, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇯🇵 日本-215.6KB/s(Youtube:不良林), server: 85.208.108.20, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
-  - {name: 🇯🇵 日本-236.2KB/s(Youtube:不良林), server: 85.208.108.20, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇯🇵 日本-247.8KB/s(Youtube:不良林), server: 85.208.108.20, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇨🇳 中国-485.8KB/s(Youtube:不良林), server: 116.129.254.177, port: 65077, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-359.3KB/s(Youtube:不良林), server: 116.129.254.177, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 (已存活1天)中国-3.88MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
+  - {name: 🇯🇵 日本-175.9KB/s(Youtube:不良林), server: 85.208.108.19, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇨🇳 中国-606.8KB/s(Youtube:不良林), server: 120.233.151.171, port: 8070, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
+  - {name: 🇨🇳 中国-250.2KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65070, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇨🇦 加拿大-979.1KB/s(Youtube:不良林), server: 134.195.196.128, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-436.6KB/s(Youtube:不良林), server: 134.195.196.128, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-456.8KB/s(Youtube:不良林), server: 134.195.196.128, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇨🇦 加拿大-922.7KB/s(Youtube:不良林), server: 134.195.196.128, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-1.04MB/s(Youtube:不良林), server: 134.195.196.128, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-614.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-945.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.63MB/s(Youtube:不良林)
-      - 🇯🇵 日本-215.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-236.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-247.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-485.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-359.3KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-3.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-175.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-606.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-250.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-979.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-436.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-456.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-922.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.04MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-614.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-945.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.63MB/s(Youtube:不良林)
-      - 🇯🇵 日本-215.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-236.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-247.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-485.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-359.3KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-3.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-175.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-606.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-250.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-979.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-436.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-456.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-922.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.04MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-614.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-945.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.63MB/s(Youtube:不良林)
-      - 🇯🇵 日本-215.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-236.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-247.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-485.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-359.3KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-3.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-175.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-606.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-250.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-979.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-436.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-456.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-922.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.04MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-614.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-945.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.63MB/s(Youtube:不良林)
-      - 🇯🇵 日本-215.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-236.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-247.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-485.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-359.3KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-3.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-175.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-606.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-250.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-979.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-436.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-456.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-922.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.04MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-614.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-945.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.63MB/s(Youtube:不良林)
-      - 🇯🇵 日本-215.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-236.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-247.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-485.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-359.3KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-3.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-175.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-606.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-250.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-979.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-436.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-456.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-922.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.04MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-614.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-945.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.63MB/s(Youtube:不良林)
-      - 🇯🇵 日本-215.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-236.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-247.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-485.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-359.3KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-3.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-175.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-606.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-250.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-979.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-436.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-456.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-922.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.04MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-614.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-945.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.63MB/s(Youtube:不良林)
-      - 🇯🇵 日本-215.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-236.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-247.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-485.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-359.3KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-3.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-175.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-606.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-250.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-979.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-436.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-456.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-922.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.04MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
