--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇬🇧 英国-843.7KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇦 加拿大-1.23MB/s(Youtube:不良林), server: 134.195.196.128, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇺🇸 美国-1.86MB/s(Youtube:不良林), server: aop.ssfree.ru, port: 443, type: vmess, uuid: 459039f4-0260-11ed-a8d1-000017022008, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /getweather, ws-headers: {Host: aop.ssfree.ru}}
-  - {name: 🇺🇸 美国-858.6KB/s(Youtube:不良林), server: 5.188.0.151, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-236.2KB/s(Youtube:不良林), server: 85.208.108.20, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇸🇬 新加坡-1.38MB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-447.2KB/s(Youtube:不良林), server: 5.188.0.151, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-897.7KB/s(Youtube:不良林), server: ftp.cn.debian.cdnet.in, port: 8030, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
   - {name: 🇨🇦 加拿大-979.1KB/s(Youtube:不良林), server: 134.195.196.128, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-436.6KB/s(Youtube:不良林), server: 134.195.196.128, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-456.8KB/s(Youtube:不良林), server: 134.195.196.128, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇨🇦 加拿大-922.7KB/s(Youtube:不良林), server: 134.195.196.128, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-1.04MB/s(Youtube:不良林), server: 134.195.196.128, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇨🇳 中国-334.7KB/s(Youtube:不良林), server: 116.129.254.177, port: 65077, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-273.5KB/s(Youtube:不良林), server: 120.233.150.146, port: 65092, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇨🇳 中国-270.9KB/s(Youtube:不良林), server: cn01.downloadmovie.cn, port: 65062, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: "%7B%22Host%22:%22cn01.downloadmovie.cn%22%7D"}}
+  - {name: 🇨🇳 中国-293.4KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65076, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇸🇬 新加坡-335.4KB/s(Youtube:不良林), server: sg.v2yyds.cc, port: 35214, type: trojan, password: 0896373c-7cd9-4221-b50d-9634990d6751, sni: sg.v2yyds.cc, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-234.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-843.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-858.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-236.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-447.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-897.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-979.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-436.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-456.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-922.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-334.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-273.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-270.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-293.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-335.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-234.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇬🇧 英国-843.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-858.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-236.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-447.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-897.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-979.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-436.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-456.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-922.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-334.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-273.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-270.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-293.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-335.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-234.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-843.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-858.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-236.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-447.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-897.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-979.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-436.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-456.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-922.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-334.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-273.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-270.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-293.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-335.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-234.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇬🇧 英国-843.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-858.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-236.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-447.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-897.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-979.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-436.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-456.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-922.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-334.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-273.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-270.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-293.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-335.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-234.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇬🇧 英国-843.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-858.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-236.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-447.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-897.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-979.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-436.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-456.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-922.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-334.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-273.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-270.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-293.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-335.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-234.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-843.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-858.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-236.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-447.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-897.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-979.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-436.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-456.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-922.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-334.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-273.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-270.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-293.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-335.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-234.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-843.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-858.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-236.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-447.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-897.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-979.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-436.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-456.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-922.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-334.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-273.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-270.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-293.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-335.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-234.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
