--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-860.8KB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇺🇸 美国-447.2KB/s(Youtube:不良林), server: 5.188.0.151, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-183.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-768.0KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-402.3KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65070, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇸🇬 新加坡-335.4KB/s(Youtube:不良林), server: sg.v2yyds.cc, port: 35214, type: trojan, password: 0896373c-7cd9-4221-b50d-9634990d6751, sni: sg.v2yyds.cc, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-675.9KB/s(Youtube:不良林), server: 134.195.196.85, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-2.03MB/s(Youtube:不良林), server: 38.75.136.161, port: 9090, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇦🇺 澳大利亚-1003.7KB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇯🇵 日本-175.9KB/s(Youtube:不良林), server: 85.208.108.19, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇨🇳 中国-1.43MB/s(Youtube:不良林), server: 120.233.151.171, port: 8030, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
   - {name: 🇨🇳 中国-234.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-1017.9KB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
   - {name: 🇦🇺 澳大利亚-295.0KB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
   - {name: 🇯🇵 日本-264.7KB/s(Youtube:不良林), server: 5.183.176.91, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-847.0KB/s(Youtube:不良林), server: 134.195.196.19, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-860.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-447.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-183.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-768.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-402.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-335.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-675.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1003.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-175.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
       - 🇨🇳 中国-234.5KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1017.9KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-295.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-264.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-847.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-860.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-447.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-183.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-768.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-402.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-335.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-675.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1003.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-175.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
       - 🇨🇳 中国-234.5KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1017.9KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-295.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-264.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-847.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-860.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-447.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-183.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-768.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-402.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-335.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-675.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1003.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-175.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
       - 🇨🇳 中国-234.5KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1017.9KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-295.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-264.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-847.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-860.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-447.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-183.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-768.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-402.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-335.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-675.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1003.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-175.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
       - 🇨🇳 中国-234.5KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1017.9KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-295.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-264.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-847.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-860.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-447.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-183.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-768.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-402.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-335.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-675.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1003.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-175.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
       - 🇨🇳 中国-234.5KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1017.9KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-295.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-264.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-847.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-860.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-447.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-183.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-768.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-402.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-335.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-675.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1003.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-175.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
       - 🇨🇳 中国-234.5KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1017.9KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-295.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-264.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-847.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-860.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-447.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-183.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-768.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-402.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-335.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-675.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1003.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-175.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
       - 🇨🇳 中国-234.5KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1017.9KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-295.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-264.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-847.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
